common/app/assets/stylesheets/module/facia/_container-related-keywords.scss
.facia-container__related-keywords {
    margin: $gs-baseline $gs-gutter;
    @include facia-container__inner;
    @include fs-data(4);

    @include mq(wide) {
        .has-page-skin & {
            width: 100%;
        }
    }

    @include mq($until: mobileLandscape) {
        margin-left: $gs-gutter/2;
    }

    .button--tag {
        margin-right: $gs-gutter / 5;
        margin-bottom: $gs-row-height / 4.5;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: gs-span(4);

        @include mq(leftCol) {
            max-width: $left-column;
        }

        @include mq(wide) {
            max-width: $left-column-wide;
        }

        .related-keywords & {
            max-width: none;
        }

        .content__keywords & {
            max-width: none;
        }

        .facia-container__related-keywords__body & {
            max-width: none;
        }
    }
    .button--more {
        @if $old-ie {
            display: none;
        }
    }
}

.facia-container__related-keywords__body {
    @include mq(leftCol) {
        margin-left: $left-column + $gs-gutter;
    }

    @include mq(wide) {
        margin-left: $left-column-wide + $gs-gutter;

        .has-page-skin & {
            margin-left: $gs-gutter;
        }
    }
}

