Spacing fix for tags

--- a/common/app/assets/stylesheets/module/facia/_container-related-keywords.scss
+++ b/common/app/assets/stylesheets/module/facia/_container-related-keywords.scss
@@ -13,34 +13,6 @@
         margin-left: $gs-gutter/2;
     }
 
-    .button--tag {
-        margin-right: $gs-gutter / 5;
-        margin-bottom: $gs-row-height / 4.5;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        max-width: gs-span(4);
-
-        @include mq(leftCol) {
-            max-width: $left-column;
-        }
-
-        @include mq(wide) {
-            max-width: $left-column-wide;
-        }
-
-        .related-keywords & {
-            max-width: none;
-        }
-
-        .content__keywords & {
-            max-width: none;
-        }
-
-        .facia-container__related-keywords__body & {
-            max-width: none;
-        }
-    }
     .button--more {
         @if $old-ie {
             display: none;
